# doradura

./: .dockerignore  .env.bot-api  .env.example  .env.schema  .env.staging  .gitignore  .gitignore.monitoring  .railway.toml  BOT_FLOWS.md  CHANGELOG.md  CLAUDE.md  CLEANUP.md  CONTRIBUTING.md  Cargo.toml  DATABASE_GIT.md  DEBUG_RAILWAY.md  DEPLOY_MANUAL.md  Dockerfile  Dockerfile.bot-api  Dockerfile.bot-api.secure  Dockerfile.combined  Dockerfile.s6  FIX_DATABASE.md  IDEAS.md  IMPROVEMENTS.md  INFO_COMMAND.md  KEY.gpg  MARKETING-ACTION-PLAN.md  MARKETING-EFFECTIVE-TACTICS.md  MARKETING-STRATEGY.md  MINIAPP_QUICKSTART.md  MONITORING_FILES.txt  OPTIMIZATION_REALISTIC_ANALYSIS.md  QUEUE_OPTIMIZATION.md  QUICK_DEPLOY.md  QUICK_DEPLOY_BOT_API.md  QUICK_FIX.md  RAILWAY_DEPLOY.md  RAILWAY_SETUP_CHECKLIST.md  README.md  (+42 more)
crates/dorabot/: Cargo.toml
crates/dorabot/benches/: queue_benchmark.rs
crates/dorabot/src/: background_tasks.rs  cli.rs  cli_commands.rs  i18n.rs  lib.rs  main.rs  metadata_refresh.rs  queue_processor.rs  startup.rs  vlipsy.rs  webhook.rs
crates/dorabot/src/core/: alerts.rs  copyright.rs  error_logger.rs  export.rs  history.rs  mod.rs  progress_pulse.rs  rate_limiter.rs  retry.rs  stats.rs  stats_reporter.rs  subscription.rs  validation.rs
crates/dorabot/src/download/: audio.rs  cancel_registry.rs  context.rs  downloader.rs  metadata.rs  mod.rs  pipeline.rs  playlist_import.rs  progress.rs  queue.rs  recommend.rs  search.rs  send.rs  vault.rs  video.rs
crates/dorabot/src/download/playlist_sync/: mod.rs  resolver.rs  soundcloud.rs  spotify.rs  yandex_music.rs
crates/dorabot/src/download/source/: instagram.rs  mod.rs  vlipsy.rs  ytdlp.rs
crates/dorabot/src/extension/: audio_effects.rs
crates/dorabot/src/mtproto/: client.rs  downloader.rs  file_id.rs
crates/dorabot/src/smoke_tests/: mod.rs  results.rs  runner.rs  scheduler.rs  test_cases.rs  validators.rs
crates/dorabot/src/telegram/: admin.rs  analytics.rs  avatar.rs  bot.rs  bot_api_logger.rs  bot_api_logger_methods.rs  cache.rs  commands.rs  cuts.rs  downloads.rs  draft.rs  ext.rs  feedback.rs  inline_query.rs  instagram.rs  markdown.rs  mod.rs  notifications.rs  operation.rs  reactions.rs  silent_digest.rs  styled.rs  subscriptions.rs  types.rs  videos.rs  voice.rs  voice_effects.rs
crates/dorabot/src/telegram/admin/: broadcast.rs  browser.rs  cookies.rs  download_helpers.rs  mod.rs  system.rs  users.rs
crates/dorabot/src/telegram/commands/: circle.rs  cut_confirm.rs  info.rs  loop_to_audio.rs  mod.rs  subtitles.rs  x264_params.rs
crates/dorabot/src/telegram/downloads/: callbacks.rs  categories.rs  cb_helpers.rs  clipping.rs  cover.rs  mod.rs  send.rs  speed.rs  stories.rs  subtitles.rs  voice_lyrics.rs
crates/dorabot/src/telegram/explore/: mod.rs  render.rs
crates/dorabot/src/telegram/guest_bots/: intent.rs  lookup.rs  mod.rs  rate_limit.rs  reply.rs
crates/dorabot/src/telegram/handlers/: commands.rs  mod.rs  schema.rs  types.rs  uploads.rs
crates/dorabot/src/telegram/menu/: admin_users.rs  archive.rs  audio_effects.rs  callback_admin.rs  callback_download.rs  callback_kind.rs  callback_preview.rs  callback_router.rs  callback_settings.rs  helpers.rs  info.rs  long_video.rs  lyrics.rs  main_menu.rs  mod.rs  player.rs  playlist.rs  playlist_integrations.rs  ringtone.rs  search.rs  settings.rs  vault.rs  vlipsy.rs
crates/dorabot/src/telegram/preview/: display.rs  formats.rs  keyboard.rs  metadata.rs  mod.rs  vlipsy.rs
crates/dorabot/src/telegram/rich/: mod.rs
crates/dorabot/src/testing/: recorder.rs  snapshots.rs
crates/dorabot/src/timestamps/: description_parser.rs  extractor.rs
crates/dorabot/src/watcher/: db.rs  instagram.rs  mod.rs  scheduler.rs  traits.rs
crates/dorabot/tests/: README.md  bot_commands.rs  bot_integration.rs  bot_snapshots.rs  core_modules.rs  download_video.rs  e2e_test.rs  handlers_integration.rs  load_test.rs  load_test_metrics.rs  load_test_report.rs  proxy_integration.rs  real_handlers.rs  search_test.rs  smoke_test.rs  ytdlp_integration.rs
crates/dorabot/tests/common/: mod.rs  recorder.rs  snapshots.rs
crates/dorabot/tests/mocks/: mock_downloader.rs  mod.rs
crates/dorabot/tests/snapshots/: SNAPSHOT_INDEX.md  audio_download_complete.json  rate_limit_error.json  youtube_processing.json
crates/doracore/: Cargo.toml
crates/doracore/src/: downsub.rs  i18n.rs  lib.rs
crates/doracore/src/conversion/: audio.rs  document.rs  image.rs  mod.rs  video.rs
crates/doracore/src/conversion/smartcrop/: detect.rs  ffmpeg.rs  mod.rs  plan.rs
crates/doracore/src/core/: admin_dashboard.html  categorizer.rs  config.rs  copyright.rs  country.rs  disk.rs  error.rs  error_logger.rs  llm.rs  logging.rs  metrics.rs  metrics_server.rs  mod.rs  odesli.rs  process.rs  share.rs  types.rs  upload_limits.rs  utils.rs  validation.rs  web_server.rs
crates/doracore/src/core/web/: auth.rs  (+9 more)
crates/doracore/src/download/: audio_effects.rs  builder.rs  cookies.rs  downloader.rs  error.rs  fast_metadata.rs  fetch.rs  metadata.rs  mod.rs  playlist.rs  pot_cache.rs  progress.rs  proxy.rs  ringtone.rs  thumbnail.rs  url_canonical.rs  ytdlp.rs  ytdlp_errors.rs
crates/doracore/src/explore/: mod.rs  timeline.rs
crates/doracore/src/extension/: mod.rs  ytdlp_downloader.rs
crates/doracore/src/lyrics/: highlights.rs  mod.rs  providers.rs  title_parser.rs
crates/doracore/src/messaging/: capabilities.rs  mod.rs  types.rs
crates/doracore/src/playlist/: mod.rs  spotify.rs
crates/doracore/src/recommend/: mod.rs
crates/doracore/src/storage/: backup.rs  cache.rs  db.rs  migrations.rs  mod.rs  shared.rs  subtitle_cache.rs  uploads.rs
crates/doracore/src/timestamps/: description_parser.rs  extractor.rs  mod.rs  url_parser.rs
crates/doracore/tests/: whatsapp_integration.rs
crates/doratui/: Cargo.toml
crates/doratui/src/: app.rs  download_runner.rs  events.rs  main.rs  settings.rs  theme.rs  video_info.rs
crates/doratui/src/ui/: history.rs  logo.rs  lyrics.rs  mod.rs  preview.rs  queue.rs  settings.rs
crates/health-monitor/: Cargo.toml
crates/health-monitor/src/: main.rs
(+625 files in other folders)
