[workspace]
members = ["crates/doracore", "crates/dorabot", "crates/doratui", "crates/health-monitor"]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32.0", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
refinery = { version = "0.8", features = ["rusqlite"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "socks", "stream", "rustls-tls"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0.66"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
url = "2.5.0"
regex = "1.10.5"
once_cell = "1.19"
uuid = "1.1"
rand = "0.8"
base64 = "0.22.1"
async-trait = "0.1.50"

# i18n
fluent-templates = "0.8"
unic-langid = "0.9"

# gRPC
tonic = { version = "0.10", features = ["transport"] }
# ONNX Runtime for ML inference
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.16"
prost = "0.12"
bytes = "1.5"
http = "0.2"
futures-util = "0.3"

# Metrics
prometheus = "0.14"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Telegram
teloxide = { version = "0.17", features = ["macros"] }

# Archive
zip = "2"

# TUI
ratatui = "0.30"
crossterm = "0.28"
