[workspace]
members = ["crates/doracore", "crates/dorabot", "crates/doratui", "crates/health-monitor"]
resolver = "2"

# Clippy lints inherited by every workspace member via the `[lints]` table
# in each crate's Cargo.toml. We don't auto-inherit here (that requires
# per-crate `lints.workspace = true`); instead we list recommended lints
# below so contributors know which are workspace policy.
#
# Currently enforced per-crate via pre-commit hook:
#   cargo clippy --workspace -- -D warnings
#
# Future: move to `[workspace.lints.clippy]` + `lints.workspace = true`
# in each crate when we're ready for the single-source-of-truth migration.
[workspace.lints.clippy]
# Regression-prevent: catch any mutex guard held across an `.await`.
# Previous audit verified no current violations; this keeps it that way.
await_holding_lock = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32.0", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
refinery = { version = "0.8", features = ["rusqlite"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
redis = { version = "0.27", default-features = false, features = ["aio", "tokio-comp", "script"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "socks", "stream", "rustls-tls"] }
axum = "0.8"

# Error handling
thiserror = "2"
anyhow = "1.0.66"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
url = "2.5.0"
regex = "1.10.5"
lazy-regex = "3"
strum = { version = "0.27", features = ["derive"] }
bon = "3"
indoc = "2"
secrecy = "0.10"
moka = { version = "0.12", features = ["future"] }
dashmap = "6"
fs-err = { version = "3", features = ["tokio"] }
itertools = "0.13"
tokio-util = { version = "0.7", features = ["rt"] }
backon = "1.5"
figment = { version = "0.10", features = ["env", "toml", "yaml"] }
uuid = "1.1"
rand = "0.10"
base64 = "0.22.1"
async-trait = "0.1.50"

# i18n
fluent-templates = "0.8"
unic-langid = "0.9"

# gRPC
tonic = { version = "0.10", features = ["transport"] }
# ONNX Runtime for ML inference
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.16"
prost = "0.12"
bytes = "1.5"
http = "0.2"
futures-util = "0.3"

# Metrics
prometheus = "0.14"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Telegram
teloxide = { version = "0.17", features = ["macros", "webhooks-axum"] }

# Archive
zip = "2"

# TUI
ratatui = "0.30"
crossterm = "0.28"

# Dev-only — nicer diffs in test failures. Import in tests as
# `use pretty_assertions::assert_eq;` to replace the std macro.
pretty_assertions = "1"

# ────────────────────────────────────────────────────────────────────
# Build profiles (v0.51.0): tune dev/release for the team's workflow.
#
# Why each setting:
#   dev.opt-level = 1
#     Default 0 produces unoptimized debug binaries that run 5-10× slower.
#     Cargo defaults to 0 because it's the cheapest *compile* setting, but
#     for a workspace this size that means `cargo run` of the bot is
#     painfully slow even before it's hit a real workload. Level 1 gets
#     us "fast enough to use" without bloating compile time meaningfully.
#
#   dev.package."*".opt-level = 3
#     Optimize *dependencies* fully even in dev. Deps recompile rarely
#     (only on Cargo.lock changes), so paying once for max speed in their
#     hot loops is a big win — sqlx queries, ffmpeg log parsing, regex
#     matching all run at release speed during development.
#
#   release.lto = "thin"
#     Default `false` skips link-time optimization. Thin LTO (~20% extra
#     link time) lets the compiler inline across crate boundaries — for
#     a multi-crate workspace this finds optimizations the per-crate
#     compiler can't see. Visible runtime win on hot paths.
#
#   release.codegen-units = 1
#     Default 16 splits each crate into 16 parallel codegen jobs (faster
#     compile, less optimal output). 1 unit per crate = single-pass
#     optimization with full local view. Adds ~30% to release build time
#     but produces measurably faster binaries on tight loops.
#
#   release.strip = "symbols"
#     Strip debug info from the final binary. Bot is shipped as a stripped
#     production binary; release builds don't need symbols (we keep them
#     in Sentry/log lines via stderr backtraces if needed).
[profile.dev]
opt-level = 1
incremental = true

# Optimize all dependencies (not our code) fully even in dev builds.
# Recompiles rarely — pay once, benefit on every `cargo run`.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
