[package]
name = "doradura"
version = "0.51.0-alpha.11"
edition = "2024"
authors = ["Stan <iamjacke@gmail.com>"]
description = "High-performance Telegram bot for downloading and converting media from multiple sources"
license = "MIT"
repository = "https://github.com/Jacke/doradura"
readme = "../../README.md"
keywords = ["telegram", "bot", "download", "convert", "media"]
categories = ["command-line-utilities"]
default-run = "doradura"

[package.metadata.dist]
dist = false

[dependencies]
doracore = { path = "../doracore", features = ["telegram"] }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
lazy-regex = { workspace = true }
indoc = { workspace = true }
secrecy = { workspace = true }
moka = { workspace = true }
dashmap = { workspace = true }
fs-err = { workspace = true }
itertools = { workspace = true }
tokio-util = { workspace = true }
backon = { workspace = true }
strum = { workspace = true }
bon = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
unic-langid = { workspace = true }
http = { workspace = true }
futures-util = { workspace = true }
prometheus = { workspace = true }
clap = { workspace = true }
teloxide = { workspace = true }

# Non-workspace deps (mirrored from core + bot-specific)
shellexpand = "3.1.0"
dotenvy = "0.15"
urlencoding = "2.1"
axum = { workspace = true }
pretty_env_logger = "0.5"
reqwest = { workspace = true }
mime = "0.3"
redis = { workspace = true }

# MTProto support via grammers
grammers-client = "0.6"
grammers-session = "0.5"
grammers-tl-types = "0.6"
grammers-mtsender = "0.5"
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = { workspace = true }
teloxide_tests = { git = "https://github.com/LasterAlex/teloxide_tests", branch = "master" }
serial_test = "3.0"
criterion = { version = "0.5", features = ["async_tokio"] }
fake = { version = "2.9", features = ["derive"] }
parking_lot = "0.12"
sysinfo = "0.31"
wiremock = "0.6"

[[test]]
name = "load_test"
path = "tests/load_test.rs"

[[bench]]
name = "queue_benchmark"
harness = false

[[bin]]
name = "mtproto-download"
path = "src/bin/mtproto_download.rs"

[lints]
workspace = true
