[package]
name = "doracore"
version = "0.22.0"
edition = "2021"
authors = ["Stan <iamjacke@gmail.com>"]
description = "Core library for Doradura — download engine, storage, i18n, lyrics (no Telegram)"
license = "MIT"

[features]
# Enables From<teloxide::RequestError> impl on AppError
telegram = ["dep:teloxide"]

[dependencies]
tokio = { workspace = true }
teloxide = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
refinery = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
fluent-templates = { workspace = true }
unic-langid = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
futures-util = { workspace = true }
prometheus = { workspace = true }
# Non-workspace deps
shellexpand = "3.1.0"
select = "0.6.1"
urlencoding = "2.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
axum = { workspace = true }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tempfile = "3.8"
pretty_env_logger = "0.5"
