[package]
name = "doratui"
version = "0.6.4"
edition = "2021"
authors = ["Stan <iamjacke@gmail.com>"]
description = "dora — beautiful TUI for media downloading (yt-dlp + ffmpeg)"
license = "MIT"
repository = "https://github.com/Jacke/doradura"
homepage = "https://github.com/Jacke/doradura"
readme = "../../README.md"
keywords = ["tui", "download", "youtube", "media", "yt-dlp"]
categories = ["command-line-utilities", "multimedia"]

[package.metadata.dist]
dist = true

[[bin]]
name = "dora"
path = "src/main.rs"

[dependencies]
doracore = { path = "../doracore" }

tokio = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

ratatui = { workspace = true }
crossterm = { workspace = true }

# Non-workspace
dotenvy = "0.15"
simplelog = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg", "webp"] }
