[package]
name = "health-monitor"
version = "0.25.3"
edition = "2024"
license = "MIT"
description = "External health monitor for doradura — pings the bot's /health endpoint and toggles the Telegram avatar/name on liveness transitions."

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.40", features = ["rt", "macros", "time"] }
log = { workspace = true }
env_logger = "0.11"

[lints]
workspace = true
